// Vitest Snapshot v1

exports[`Render <Footer/> 1`] = `
<DocumentFragment>
  <footer
    class="af-footer"
  >
    <div
      class="container-fluid container"
    >
      <a
        class="af-logo"
        href="https://www.axa.fr/"
        target="blank"
        title="Site Axa"
      >
        <img
          alt="Logo Axa"
          class="af-logo__brand"
          src="/node_modules/@axa-fr/react-toolkit-core/dist/assets/logo-axa.svg"
        />
      </a>
      <div
        class="af-footer-content"
      >
        © 2022 AXA Tous droits réservés - v0.5.3
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Render <Footer/> fullscreen 1`] = `
<DocumentFragment>
  <footer
    class="af-footer af-footer--fullscreen"
  >
    <div
      class="container-fluid container"
    >
      <a
        class="af-logo"
        href="https://www.axa.fr/"
        target="blank"
        title="Site Axa"
      >
        <img
          alt="Logo Axa"
          class="af-logo__brand"
          src="/node_modules/@axa-fr/react-toolkit-core/dist/assets/logo-axa.svg"
        />
      </a>
      <div
        class="af-footer-content"
      >
        © 2022 AXA Tous droits réservés - v0.5.3
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
